@@ -37,6 +37,7 @@ Version 1.4.6 - CVS
   - Fixed address book file and database backend error messages broken by
     CAN-2005-1769 patches.
   - Fixed compose form redirection in spamcop plugin.
+  - "Toggle all" pointless when folder list empty (#1267079).
 
 Version 1.4.5 - 13 July 2005
 ----------------------------
